@@ -1,3 +1,11 @@
+Knot Resolver 3.x.y (2018-mm-dd)
+================================
+
+Improvements
+------------
+- cache: handle out-of-space SIGBUS slightly better (#197)
+
+
 Knot Resolver 3.0.0 (2018-08-20)
 ================================
 
